<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/box_one"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="13dp"
        android:hint="@string/box_one" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/box_two"
        android:layout_below="@+id/box_one"
        android:layout_alignLeft="@+id/box_one"
        android:hint="@string/box_two" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/box_three"
        android:layout_below="@+id/box_two"
        android:layout_alignLeft="@+id/box_two"
        android:hint="@string/box_three" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/box_four"
        android:layout_below="@+id/box_three"
        android:layout_alignLeft="@+id/box_three"
        android:hint="@string/box_four" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/box_four"
            android:layout_marginTop="15dp"
            android:text="@string/button_send"
            android:id="@+id/button"/>

</RelativeLayout>
